--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,8 @@ main{
     background-image: url(../imagens/fundo-madeira.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top center;
+    background-attachment: fixed;
 }
 
 #telefone{
@@ -31,7 +33,8 @@ main{
     background-image: url(../imagens/frame-iphone.png);
     background-repeat: no-repeat;
     background-size: contain;
-}
+   }
+
 iframe{
     height: 375px;
     width: 210px;
@@ -40,17 +43,19 @@ iframe{
 
 }
 
-#redes{
-    display: flex;
-    flex-direction: column;
-    width: 50px;
+section#redes{
+    text-align: right;
 }
-img{
+ section#redes img{
     border-radius: 50%;
     width: 50px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.692);
+    margin: 5px;
+    box-sizing: border-box;
 }
 
-a:hover{
+img:hover{
     animation-duration: 1s;
-    display: grid;
+    border: 2px solid white;
+    transform: translate(-8px, -8px);
 }
