--- a/style/style.css
+++ b/style/style.css
@@ -57,5 +57,6 @@ section#redes{
 img:hover{
     animation-duration: 1s;
     border: 2px solid white;
-    transform: translate(-8px, -8px);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.692);
 }
